# apps-workspace

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  High-Protein-Smoothies-No-Powder.md  Mac-Window-Tiling-Shortcuts.md  codex-self-sufficient-skillops-guide.md  timeline.md
.claude/: settings.json
BestChef/: CLAUDE.md  app.json  package.json  tsconfig.json
MyBooks/: .gitignore  CLAUDE.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  timeline.md  turbo.json
MyLife/: .gitignore  AGENTS.md  CLAUDE.md  README.md
MyVoice/: .gitignore  CLAUDE.md  LICENSE  README.md  electron-builder.json  package-lock.json  package.json  timeline.md  tsconfig.json
Pokemon/: CLAUDE.md  index.html  package-lock.json  package.json  progress.md  serve.ts  timeline.md  tsconfig.json  vitest.config.ts
TheMarlinTraders/: .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  timeline.md  tsconfig.json  turbo.json
ThePillBill/: .gitignore  README.md  audit-medications.md  audit-taper-protocol.md  audit-wound-activity.md  post-op-regimen-daily-breakdown.md  pyproject.toml  timeline.md
ThePillBill/.cmux/: setup
ThePillBill/docs/: schedule-format-research.md
ThePillBill/scripts/: automation_daily.sh  pb  verify_all_patient-001.sh  verify_one
ThePillBill/src/pillbill/: __init__.py  cli.py  emailer.py  extractors.py  models.py  safety.py  scheduler.py  storage.py
ThePillBill/tests/: test_extractors.py  test_safety.py  test_scheduler.py
automation-hub/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  (+2 more)
(+748 files in other folders)
